# llm_zoomcamp

./: .gitignore  pyproject.toml
0_build_search_engine/: search_engine.ipynb
1_intro/: README.md  hw.ipynb  rag_intro.ipynb  test.ipynb
2.1_ws_agents/: agents.ipynb  agents_script.ipynb  hw_quadrant.ipynb
2.1_ws_agents/agents_hw/: chat_assistant.py  hw_agents.ipynb  weather_server.py
2_vector_search/: 1_sematic_search.ipynb  2_rag.ipynb  3_hybrid_search.ipynb  hw.ipynb
3_evaluation/: 1_ground_truth_data.ipynb  2_evaluate_text.ipynb  3_hw_eval_vector_search.ipynb  4_offline_rag_evaluation.ipynb
